update automation tests

--- a/results/report.html
+++ b/results/report.html
@@ -1881,22 +1881,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,18],[[4,5,6,0,[],[1,17,1],[],[[7,0,0,[],[1,17,1],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,115,4],[],[[5,0,6,[],[0,114,0,7],[]],[8,0,9,[],[0,114,0,7],[]]],[],[2,0,2,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*/Users/wantidadechtawee/Documents/Automation-Testing/PW-APITEST-APP/tests","*../tests","*Todo","*/Users/wantidadechtawee/Documents/Automation-Testing/PW-APITEST-APP/tests/todo.robot","*../tests/todo.robot","*TC_01 Dummy Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Todo","*/Users/wantidadechtawee/Documents/Automation-Testing/PW-APITEST-APP/tests/todo.robot","*../tests/todo.robot","eNqFkEFrwkAQhe/5FQ8vJlBqo6XCgocill4qot5KD2sykoVlZ9mZEP333eag9CRzHN73Pd6hd0oQ0j7ibJ2n1hRf9rInTddNSpwMPo/H3ZpDoEYdhx2zLzsWXU3r+fL5JV89fULkpKvX5XxRGeQ8UgY4EtClIWqpxeC0Q5+8wUxIJJNQrm0v+XW6YkvDXTF6y8l/7wPnx9gdyiBRe/JOOlgEGtDcEAbfGR0Yb/UP7uTc9fzXY1JVRfHuhSHjKEo2tTyE2y5bho3Ru8aOMSfgSOEXzwltdg==","*TC_01 Add Todo Successfully","*<p>Verify user can add a new todo\x3c/p>","eNqFkD1rw0AQRHv9isGNJQhJ5AQbDlwEk5AmRgR3wcVZWqOD4/a4XSH73+eiwh9V2HKZ94ZpbKKgkMEpQUiHiKN1njpTfNnTN2k6v6fEyeBzt2s2HAK16jg0zL7sWXQ9rxerx+d89fwBkZOuX1eLl8og55EywJGATi1RRx1Gpz2G5A2ehEQyCeXGDpJfhzO2NF4Vk7ec3Xv/cX5M3aEMErUH76SHRaAR7QVh8JPRgbGs97iSc9fjX49ZVRXFmxdGvN1GyaaOx3CZZ8uwMXrX2intBBwp/AJTIXLK","*TC_02 Delete Todo Successfully","*<p>Verify user can delete existing todo\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"Tests.Todo","name":"Todo","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":2,"id":"s1","label":"Todo","name":"Todo","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1766594200209;
+window.output["baseMillis"] = 1766637264293;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 19;
+window.output["generated"] = 117;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
